@@ -346,7 +346,7 @@ Systematic: "tt_Rad_HiLow"
 %   Regions: HThad_5j3b,HThad_ge6jge4b
   NtupleFileSufUp: "_radHi"
   NtupleFileSufDown: "_radLo"
-  ReferenceSample: ttbar_pyt8 % example of usage of ReferenceSample
+%   ReferenceSample: ttbar_pyt8 % example of usage of ReferenceSample
   Smoothing: 40
   Symmetrisation: TWOSIDED
 %   Decorrelate: REGION
